Add server side ssh client
